--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: python
 python:
-  "3.7"
+  - "3.7.9"
 # command to install dependencies
 install:
-  - pip install -U discord.py
+  - pip install -r requirements.txt
 # command to run tests
 script:
-  - pytest
+  - python ./bot.py --test-run
+cache: pip
+notifications:
+  email: false
+dist: trusty
+os: linux
